welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:5: error: not found: value i
    case (_, _) => return Math.max(i,j)
                                   ^maxMod5:5: error: not found: value j
    case (_, _) => return Math.max(i,j)
                                     ^